# 24a-CollectWaistSimData

./: CMakeLists.txt  Controller.cpp  Controller.hpp  Main.cpp  MyWindow.cpp  MyWindow.hpp  README.md
